[package]
name = "javascriptcore"
version = "0.0.4"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Bindings to the JavaScriptCore framework."
keywords = ["javascript", "jsc", "scripting"]
documentation = "https://endoli.github.io/javascriptcore.rs/"
homepage = "https://github.com/endoli/javascriptcore.rs"
repository = "https://github.com/endoli/javascriptcore.rs"
categories = ["api-bindings"]
exclude = ["javascript_core/**"]

[dependencies]
javascriptcore-sys = { path = "javascriptcore-sys", version = "0.0.4" }
