[package]
name = "javascriptcore-sys"
version = "0.0.1"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Raw bindings to the JavaScriptCore framework."
keywords = ["javascript", "jsc"]
documentation = "https://endoli.github.io/javascriptcore.rs/javascriptcore_sys/index.html"
homepage = "https://github.com/endoli/javascriptcore.rs"
repository = "https://github.com/endoli/javascriptcore.rs"
build = "build.rs"
