[package]
name = "javascriptcore-sys"
version = "0.0.2"
authors = ["Bruce Mitchener <bruce.mitchener@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = "Raw bindings to the JavaScriptCore framework."
keywords = ["javascript", "jsc", "scripting"]
documentation = "https://endoli.github.io/javascriptcore.rs/javascriptcore_sys/index.html"
homepage = "https://github.com/endoli/javascriptcore.rs"
repository = "https://github.com/endoli/javascriptcore.rs"
categories = ["external-ffi-bindings"]
build = "build.rs"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "*"
